--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/ButtonSpinner/Themes/Generic.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/ButtonSpinner/Themes/Generic.xaml
@@ -58,8 +58,9 @@
                                             <chrome:ButtonChrome CornerRadius="0"
                                                                  RenderEnabled="{TemplateBinding IsEnabled}"
                                                                  RenderMouseOver="{Binding IsMouseOver, ElementName=IncreaseButton}"
-                                                                 RenderPressed="{Binding IsPressed, ElementName=IncreaseButton}"/>
-                                            <ContentControl ContentTemplate="{StaticResource IncreaseGlyph}" Margin="5,1" Focusable="False" />
+                                                                 RenderPressed="{Binding IsPressed, ElementName=IncreaseButton}">
+                                                <ContentControl ContentTemplate="{StaticResource IncreaseGlyph}" Margin="5,1" Focusable="False" />
+                                            </chrome:ButtonChrome>
                                         </Grid>
                                     </RepeatButton>
                                     <RepeatButton x:Name="DecreaseButton" SnapsToDevicePixels="True" Grid.Row="2" ClickMode="Press" IsTabStop="{Binding IsTabStop, RelativeSource={RelativeSource TemplatedParent}}" >
@@ -72,8 +73,9 @@
                                             <chrome:ButtonChrome CornerRadius="0"
                                                                  RenderEnabled="{TemplateBinding IsEnabled}"
                                                                  RenderMouseOver="{Binding IsMouseOver, ElementName=DecreaseButton}"
-                                                                 RenderPressed="{Binding IsPressed, ElementName=DecreaseButton}"/>
-                                            <ContentControl ContentTemplate="{StaticResource DecreaseGlyph}" Margin="5,1" Focusable="False" />
+                                                                 RenderPressed="{Binding IsPressed, ElementName=DecreaseButton}" >
+                                                <ContentControl ContentTemplate="{StaticResource DecreaseGlyph}" Margin="5,1" Focusable="False" />
+                                            </chrome:ButtonChrome>
                                         </Grid>
                                     </RepeatButton>
                                 </Grid>
