--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Wizard/Themes/Generic.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Wizard/Themes/Generic.xaml
@@ -1,8 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Microsoft.Windows.Controls">
+                    xmlns:local="clr-namespace:Microsoft.Windows.Controls"
+                    xmlns:coreConverters="clr-namespace:Microsoft.Windows.Controls.Core.Converters">
+
+    <coreConverters:WizardPageButtonVisibilityConverter x:Key="WizardPageButtonVisibilityConverter" />
 
     <Style TargetType="{x:Type local:Wizard}">
+        <Setter Property="ItemsPanel">
+            <Setter.Value>
+                <ItemsPanelTemplate>
+                    <Grid />
+                </ItemsPanelTemplate>
+            </Setter.Value>
+        </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:Wizard}">
@@ -12,21 +22,66 @@
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
-                            
-                            <ItemsPresenter />
-                            
+
+                            <ContentPresenter Content="{Binding CurrentPage, RelativeSource={RelativeSource TemplatedParent}}" />
+
                             <StackPanel Background="{TemplateBinding Background}" Grid.Row="1" Margin="7">
                                 <Grid Margin="{TemplateBinding Padding}">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Width="*" />
                                     </Grid.ColumnDefinitions>
-                                    <Button Name="PART_HelpButton" Grid.Column="0" MinWidth="75" Content="Help" />
+                                    <Button Name="PART_HelpButton" Grid.Column="0" MinWidth="75" 
+                                            Command="local:WizardCommands.Help" 
+                                            Content="{TemplateBinding HelpButtonContent}">
+                                        <Button.Visibility>
+                                            <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
+                                                <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="HelpButtonVisibility" />
+                                                <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.HelpButtonVisibility" />
+                                            </MultiBinding>
+                                        </Button.Visibility>
+                                    </Button>
                                     <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                                        <Button Name="PART_CancelButton" Margin="0,0,7,0" MinWidth="75" Content="Cancel" />
-                                        <Button Name="PART_BackButton" MinWidth="75" Content="Back" />
-                                        <Button Name="PART_NextButton" MinWidth="75" Content="Next" />
-                                        <Button Name="PART_FinishButton" Margin="7,0,0,0" MinWidth="75" Content="Finish" />
+                                        <Button Name="PART_CancelButton" Margin="0,0,7,0" MinWidth="75" 
+                                                Command="local:WizardCommands.Cancel" 
+                                                Content="{TemplateBinding CancelButtonContent}" >
+                                            <Button.Visibility>
+                                                <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
+                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CancelButtonVisibility" />
+                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.CancelButtonVisibility" />
+                                                </MultiBinding>
+                                            </Button.Visibility>
+                                        </Button>
+                                        <Button Name="PART_BackButton" MinWidth="75" 
+                                                Command="local:WizardCommands.PreviousPage" 
+                                                Content="{TemplateBinding BackButtonContent}" >
+                                            <Button.Visibility>
+                                                <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
+                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="BackButtonVisibility" />
+                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.BackButtonVisibility" />
+                                                </MultiBinding>
+                                            </Button.Visibility>
+                                        </Button>
+                                        <Button Name="PART_NextButton" MinWidth="75" 
+                                                Command="local:WizardCommands.NextPage"
+                                                Content="{TemplateBinding NextButtonContent}" >
+                                            <Button.Visibility>
+                                                <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
+                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="NextButtonVisibility" />
+                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.NextButtonVisibility" />
+                                                </MultiBinding>
+                                            </Button.Visibility>
+                                        </Button>
+                                        <Button Name="PART_FinishButton" Margin="7,0,0,0" MinWidth="75" 
+                                                Command="local:WizardCommands.Finish" 
+                                                Content="{TemplateBinding FinishButtonContent}" >
+                                            <Button.Visibility>
+                                                <MultiBinding Converter="{StaticResource WizardPageButtonVisibilityConverter}" >
+                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="FinishButtonVisibility" />
+                                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="CurrentPage.FinishButtonVisibility" />
+                                                </MultiBinding>
+                                            </Button.Visibility>
+                                        </Button>
                                     </StackPanel>
                                 </Grid>
                             </StackPanel>
@@ -48,7 +103,7 @@
                         </Grid.RowDefinitions>
                         <Grid Name="PART_Header" >
                             <StackPanel Grid.Column="0">
-                                <TextBlock Margin="16,9,0,1" TextWrapping="Wrap" FontWeight="Bold" Text="{TemplateBinding Caption}" />
+                                <TextBlock Margin="16,9,0,1" TextWrapping="Wrap" FontWeight="Bold" Text="{TemplateBinding Title}" />
                                 <TextBlock Margin="32,0,0,3" TextWrapping="Wrap" Text="{TemplateBinding Description}" />
                             </StackPanel>
                         </Grid>
